--- a/index.html
+++ b/index.html
@@ -3,83 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js Enhanced Model Scene</title>
+    <title>Three.js GLB Model</title>
     <style>
         body {
             margin: 0;
             overflow: hidden;
-            background: #000;
+            background: url('hauhi.jpg') no-repeat center center fixed;
+            background-size: cover;
         }
         canvas {
             display: block;
         }
+        .overlay-text {
+            position: absolute;
+            top: 50px;
+            width: 100%;
+            text-align: center;
+            font-size: 48px;
+            font-weight: bold;
+            color: black;
+            font-family: Arial, sans-serif;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/postprocessing/EffectComposer.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/postprocessing/RenderPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/postprocessing/ShaderPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three/examples/js/shaders/ColorCorrectionShader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-<script>
-    // Base setup
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.set(0, 5, 0);  // Вид сверху
-    camera.lookAt(0, 0, 0);
+    <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
-    const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    renderer.outputEncoding = THREE.sRGBEncoding;
-    document.body.appendChild(renderer.domElement);
+    <script>
+        // Создаем сцену, камеру и рендерер
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
+        
+        camera.position.set(0, 10, 0);
+        camera.lookAt(0, 0, 0);
 
-    // Controls (disabled rotation, only panning if needed)
-    const controls = new THREE.OrbitControls(camera, renderer.domElement);
-    controls.enableRotate = false;
-    controls.enableZoom = true;
+        const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.outputEncoding = THREE.sRGBEncoding;
+        document.body.appendChild(renderer.domElement);
 
-    // Lights
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.7); // Мягкий свет для заполнения сцены
-    scene.add(ambientLight);
+        // Освещение
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
+        scene.add(ambientLight);
 
-    const pointLight = new THREE.PointLight(0xffffff, 2, 100);
-    pointLight.position.set(5, 10, 5);
-    scene.add(pointLight);
+        const pointLight = new THREE.PointLight(0xffffff, 1.5);
+        pointLight.position.set(0, 10, 10);
+        scene.add(pointLight);
 
-    // Load models and animations
-    let mixer;
-    const loader = new THREE.GLTFLoader();
-    loader.load('untitled2.glb', function (glb) {
-        const model = glb.scene;
-        mixer = new THREE.AnimationMixer(model);
-        glb.animations.forEach((clip) => {
-            const action = mixer.clipAction(clip);
-            action.play();
-            action.timeScale = 0.3;
+        // Загрузка модели
+        let mixer;
+        const loader = new THREE.GLTFLoader();
+
+        loader.load('/untitled.glb', function (glb) {
+            const model = glb.scene;
+            mixer = new THREE.AnimationMixer(model);
+            glb.animations.forEach((clip) => {
+                const action = mixer.clipAction(clip);
+                action.play();
+            });
+            model.position.set(0, 0, 0);
+            model.scale.set(1, 1, 1);
+            scene.add(model);
         });
-        model.scale.set(1.2, 1.2, 1.2);
-        model.position.set(0, 0, 0);
-        scene.add(model);
-    });
 
-    // Postprocessing for contrast and saturation
-    const composer = new THREE.EffectComposer(renderer);
-    composer.addPass(new THREE.RenderPass(scene, camera));
+        // Анимация и рендеринг
+        function animate() {
+            requestAnimationFrame(animate);
+            const delta = 0.016;
+            if (mixer) mixer.update(delta);
+            renderer.render(scene, camera);
+        }
 
-    const colorCorrectionPass = new THREE.ShaderPass(THREE.ColorCorrectionShader);
-    colorCorrectionPass.uniforms["powRGB"].value = new THREE.Vector3(1.2, 1.2, 1.2); // Contrast
-    colorCorrectionPass.uniforms["mulRGB"].value = new THREE.Vector3(1.1, 1.1, 1.1); // Saturation
-    composer.addPass(colorCorrectionPass);
-
-    // Animation loop
-    function animate() {
-        requestAnimationFrame(animate);
-        if (mixer) mixer.update(0.016);
-        composer.render();
-    }
-    animate();
-</script>
+        animate();
+    </script>
 </body>
 </html>
