--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf06829, 4);
+        const pointLight = new THREE.PointLight(0xf8c8a8, 5);
         pointLight.position.set(-3, 5, 10);
         scene.add(pointLight);
 
