--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.outputEncoding = THREE.sRGBEncoding;
-        renderer.gammaFactor = 4;
-        renderer.gammaOutput = true;
+        renderer.outputEncoding = THREE.sRGBEncoding; // Установка правильного кодирования
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setClearColor(0x000000, 0);  // Установка прозрачного фона
         document.body.appendChild(renderer.domElement);
