--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.outputEncoding = THREE.sRGBEncoding; // Установка правильного кодирования
+        renderer.toneMapping = THREE.ReinhardToneMapping;
         renderer.shadowMap.enabled = true;
         renderer.shadowMap.type = THREE.PCFSoftShadowMap; // Мягкие тени
         renderer.setPixelRatio(window.devicePixelRatio);
