--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         
-        camera.position.set(0, 5, 0);
+        camera.position.set(0, 5, 5);  // Камера будет на фиксированном расстоянии от объектов
         camera.lookAt(0, 0, 0);
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
