--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <!-- Используем другую ссылку на TWEEN.js -->
+    <!-- Подключаем TWEEN.js в конце для надежности -->
     <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
 </head>
 <body>
@@ -120,3 +120,4 @@
     </script>
 </body>
 </html>
+
