--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
+    <!-- Подключаем TWEEN.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-
-    <!-- Добавим TWEEN.js с атрибутом defer -->
-    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js" defer></script>
 
     <script>
         // Создаем сцену, камеру и рендерер
