--- a/index.html
+++ b/index.html
@@ -25,22 +25,19 @@
             font-family: Arial, sans-serif;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
-
-    <!-- Подключаем TWEEN.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 
     <script>
         // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         
-        camera.position.set(0, 5, 0); // Камера расположена на высоте 5 и смотрит на центр сцены
+        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
         camera.lookAt(0, 0, 0); // Смотрит в центр сцены
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
@@ -52,23 +49,25 @@
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.3);
         scene.add(ambientLight);
 
-        const pointLight = new THREE.PointLight(0xf8c8a8, 3.3);
-        pointLight.position.set(-3, 8, 5);
+        const pointLight = new THREE.PointLight(0xf8c8a8, 5);
+        pointLight.position.set(-3, 5, 7);
         scene.add(pointLight);
 
         // Текущая модель
         let currentModel = null;
         let mixer;
 
-        // Функция для загрузки модели
+        // Функция для загрузки модели с анимацией плавного появления
         function loadModel(modelPath) {
             const loader = new THREE.GLTFLoader();
             loader.load(modelPath, function (glb) {
-                // Очистка предыдущей модели с анимацией
+                // Анимация для удаления старой модели
                 if (currentModel) {
-                    // Добавляем анимацию для старой модели
                     new TWEEN.Tween(currentModel.position)
-                        .to({ y: 5 }, 1000) // Двигаем старую модель вверх
+                        .to({ y: 5 }, 1000) // Поднимаем старую модель вверх (анимируем исчезновение)
+                        .onComplete(function() {
+                            scene.remove(currentModel); // Удаляем после анимации
+                        })
                         .start();
                 }
 
@@ -81,16 +80,16 @@
                     action.play();
                 });
 
-                model.position.set(0, -5, 0); // Начальная позиция новой модели снизу
+                model.position.set(0, -5, 0); // Начальная позиция модели снизу
                 model.scale.setScalar(1.2);
                 scene.add(model);
 
                 // Обновляем текущую модель
                 currentModel = model;
 
-                // Добавляем анимацию для новой модели
+                // Анимация для плавного появления новой модели
                 new TWEEN.Tween(model.position)
-                    .to({ y: 0 }, 1000) // Двигаем новую модель в центр
+                    .to({ y: 0 }, 1000) // Поднимаем новую модель в центр
                     .start();
             });
         }
