--- a/index.html
+++ b/index.html
@@ -25,20 +25,18 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
     <script>
-        // Создаем сцену, камеру и рендерер
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        
-        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
-        camera.lookAt(0, 0, 0); // Смотрит в центр сцены
+        camera.position.set(0, 5, 5); 
+        camera.lookAt(0, 0, 0); 
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -53,67 +51,56 @@
         pointLight.position.set(-3, 5, 7);
         scene.add(pointLight);
 
-        // Текущая модель
         let currentModel = null;
         let mixer;
 
-        // Функция для загрузки модели с анимацией плавного появления
         function loadModel(modelPath) {
             const loader = new THREE.GLTFLoader();
             loader.load(modelPath, function (glb) {
-                // Анимация для удаления старой модели
                 if (currentModel) {
+                    // Тween для плавного исчезновения старой модели
                     new TWEEN.Tween(currentModel.position)
-                        .to({ y: 5 }, 1000) // Поднимаем старую модель вверх (анимируем исчезновение)
+                        .to({ y: 5 }, 1000) 
                         .onComplete(function() {
-                            scene.remove(currentModel); // Удаляем после анимации
+                            scene.remove(currentModel); 
                         })
                         .start();
                 }
 
-                // Загружаем новую модель
                 const model = glb.scene;
                 mixer = new THREE.AnimationMixer(model);
-
                 glb.animations.forEach((clip) => {
                     const action = mixer.clipAction(clip);
                     action.play();
                 });
 
-                model.position.set(0, -5, 0); // Начальная позиция модели снизу
+                model.position.set(0, -5, 0);
                 model.scale.setScalar(1.2);
                 scene.add(model);
 
-                // Обновляем текущую модель
                 currentModel = model;
 
-                // Анимация для плавного появления новой модели
                 new TWEEN.Tween(model.position)
-                    .to({ y: 0 }, 1000) // Поднимаем новую модель в центр
+                    .to({ y: 0 }, 1000) 
                     .start();
             });
         }
 
-        // Загружаем начальную модель
         loadModel('/untitled2.glb');
 
-        // Обработчик прокрутки колесика
         window.addEventListener('wheel', function(event) {
             if (event.deltaY > 0) {
-                // Прокрутка вниз, загружаем следующую модель
                 loadModel('/untitled.glb');
             } else {
-                // Прокрутка вверх, возвращаемся к предыдущей модели
                 loadModel('/untitled2.glb');
             }
         });
 
-        // Анимация и рендеринг
         function animate() {
             requestAnimationFrame(animate);
             const delta = 0.014;
             if (mixer) mixer.update(delta);
-            TWEEN.update(); // Обновляем все анимации TWEEN
+            TWEEN.update(); 
             renderer.render(scene, camera);
         }
 
