--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
+    <!-- Подключаем Three.js и TWEEN.js с другого CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
@@ -58,7 +59,6 @@
             const loader = new THREE.GLTFLoader();
             loader.load(modelPath, function (glb) {
                 if (currentModel) {
-                    // Тween для плавного исчезновения старой модели
                     new TWEEN.Tween(currentModel.position)
                         .to({ y: 5 }, 1000) 
                         .onComplete(function() {
@@ -108,3 +108,4 @@
     </script>
 </body>
 </html>
+
