--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </style>
     <!-- Подключаем Three.js и TWEEN.js с другого CDN -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+    <!-- Подключаем TWEEN.js через обычную ссылку на CDN -->
     <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
@@ -34,6 +35,9 @@
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
     <script>
+        // Убедимся, что TWEEN доступен в глобальной области видимости
+        window.TWEEN = TWEEN || {};
+
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 5, 5); 
