--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <!-- Подключаем Three.js и TWEEN.js с другим CDN и добавляем defer для правильной загрузки -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js" defer></script>
+    <!-- Подключаем библиотеки Three.js и TWEEN.js -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
     <script>
-        // Убедимся, что TWEEN доступен в глобальной области видимости
-        window.TWEEN = window.TWEEN || {};
+        // Проверяем, что TWEEN загружен
+        if (typeof TWEEN === "undefined") {
+            console.error("TWEEN is not defined. Please check the script order.");
+        }
 
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -111,3 +113,4 @@
     </script>
 </body>
 </html>
+
