--- a/index.html
+++ b/index.html
@@ -25,20 +25,26 @@
             font-family: Arial, sans-serif;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- Подключаем библиотеки Three.js и TWEEN.js -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tween.js@18.6.4/dist/tween.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/tween.min.js"></script>
 </head>
 <body>
     <div class="overlay-text">ПРОДАЮ ПЛАКАТЫ</div>
 
     <script>
-        // Создаем сцену, камеру и рендерер
+        // Проверка, если TWEEN загружен
+        if (typeof TWEEN === 'undefined') {
+            console.error("TWEEN.js не загружен.");
+        } else {
+            console.log("TWEEN.js загружен успешно.");
+        }
+
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        
-        camera.position.set(0, 5, 5); // Камера расположена на высоте 5 и смотрит на центр сцены
-        camera.lookAt(0, 0, 0); // Смотрит в центр сцены
+        camera.position.set(0, 5, 5); 
+        camera.lookAt(0, 0, 0); 
 
         const renderer = new THREE.WebGLRenderer({ alpha: true, antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
@@ -53,68 +59,55 @@
         pointLight.position.set(-3, 5, 7);
         scene.add(pointLight);
 
-        // Текущая модель
         let currentModel = null;
         let mixer;
 
-        // Функция для загрузки модели
-        function loadModel(modelPath, isNextModel) {
+        function loadModel(modelPath) {
             const loader = new THREE.GLTFLoader();
             loader.load(modelPath, function (glb) {
+                if (currentModel) {
+                    new TWEEN.Tween(currentModel.position)
+                        .to({ y: 5 }, 1000) 
+                        .onComplete(function() {
+                            scene.remove(currentModel); 
+                        })
+                        .start();
+                }
+
                 const model = glb.scene;
                 mixer = new THREE.AnimationMixer(model);
-
                 glb.animations.forEach((clip) => {
                     const action = mixer.clipAction(clip);
                     action.play();
                 });
 
-                model.position.set(0, isNextModel ? -5 : 5, 0); // Начальная позиция новой модели
+                model.position.set(0, -5, 0);
                 model.scale.setScalar(1.2);
                 scene.add(model);
 
-                // Анимация перемещения текущей модели вверх
-                if (currentModel) {
-                    new TWEEN.Tween(currentModel.position)
-                        .to({ y: 10 }, 1000)
-                        .easing(TWEEN.Easing.Quadratic.Out)
-                        .onComplete(() => {
-                            scene.remove(currentModel);
-                        })
-                        .start();
-                }
-
-                // Анимация перемещения новой модели на место
-                new TWEEN.Tween(model.position)
-                    .to({ y: 0 }, 1000)
-                    .easing(TWEEN.Easing.Quadratic.Out)
-                    .start();
-
-                // Обновляем текущую модель
                 currentModel = model;
+
+                new TWEEN.Tween(model.position)
+                    .to({ y: 0 }, 1000) 
+                    .start();
             });
         }
 
-        // Загружаем начальную модель
-        loadModel('/untitled2.glb', false);
+        loadModel('/untitled2.glb');
 
-        // Обработчик прокрутки колесика
         window.addEventListener('wheel', function(event) {
             if (event.deltaY > 0) {
-                // Прокрутка вниз, загружаем следующую модель
-                loadModel('/untitled.glb', true);
+                loadModel('/untitled.glb');
             } else {
-                // Прокрутка вверх, возвращаемся к предыдущей модели
-                loadModel('/untitled2.glb', false);
+                loadModel('/untitled2.glb');
             }
         });
 
-        // Анимация и рендеринг
         function animate() {
             requestAnimationFrame(animate);
-            TWEEN.update();
             const delta = 0.014;
             if (mixer) mixer.update(delta);
+            TWEEN.update();  // Обновляем TWEEN анимации
             renderer.render(scene, camera);
         }
 
